<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LaSalleCataluñaApp</string>
    <string name="All">All</string>
    <string name="IPE">SCHOOLS</string>
    <string name="BFU">OTHERS</string>
    <string name="registerAdmin">Registrar un nuevo usuario</string>
    <string name="username">Nombre de usuario</string>
    <string name="realName">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="password">Contraseña</string>
    <string name="confirmPassword">Confirmar Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="email">Correo Electronico</string>
    <string name="errorEmail">Escribe el email correctamente,porfavor</string>
    <string name="errorName">Escribe tu nombre</string>
    <string name="errorSurname">Escribe tu apellido</string>
    <string name="errorPass">Escribe tu contraseña</string>
    <string name="errorConfirmPass">La contraseña no coincide</string>
    <string name="errorUsername">Escribe el nombre de usuario</string>
    <string name="loginAdmin">Login para Administradores</string>
    <string name="usernameOrEmail">Nombre de usuario o Email</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="or">O</string>
    <string name="loginFacebook">INICIAR SESIÓN CON FACEBOOK</string>
    <string name="loginTwitter">INICIAR SESIÓN CON TWITTER</string>
    <string name="loginGoogle">INICIAR SESIÓN CON GOOGLE</string>
    <string name="facebook_app_id">195448987919270</string>
    <string name="fb_login_protocol_scheme">fb195448987919270</string>
    <string name="orderASC">ordenar alfabeticamente</string>
    <string name="logout">logout</string>
    <string name="TitleDialogDelete">Quieres borrar el centro?</string>
    <string name="TitleDialogInsert">Quieres añadir un nuevo centro?</string>
    <string name="AcceptToDelete">Borrar </string>
    <string name="Delete">Borrar</string>
    <string name="Cancel">Cancelar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="deleteSure">Seguro que quieres borrar el centro?</string>

    <string name="nom_escola">Nombre escuela</string>
    <string name="adreça_test">Calle Test, n 1024, 100110 BCN</string>
    <string name="tipus_estudis_test">Solo informática a modo test</string>
    <string name="titol_descripcio">Descripción</string>
    <string name="title_add_new_centre">Añadir una nueva escuela</string>
    <string name="school_name_hint">Nombre de la escuela</string>
    <string name="school_address_hint">Dirección de la escuela</string>
    <string name="title_provincia">Provincia de la escuela</string>

    <string name="errorEmpty">Can\'t leave this field in blank!</string>
    <string name="errorTitle"> ERROR!</string>
    <string name="errorCourses">You must select some courses</string>
    <string name="errorAdd">There was an error adding the school.</string>
    <string name="successfulInsertion">School added succesfully</string>
    <string name="loading">Loading...</string>

    <string-array name="provincies_array">
        <item>Barcelona</item>
        <item>Girona</item>
        <item>Lleida</item>
        <item>Tarragona</item>
    </string-array>

    <string name="barcelona">Barcelona</string>
    <string name="girona">Girona</string>
    <string name="lleida">Lleida</string>
    <string name="tarragona">Tarragona</string>

    <string-array name="school_groups">
        <item>All</item>
        <item>Schools</item>
        <item>Others</item>
    </string-array>

    <string name="all">All</string>
    <string name="schoola">Schools</string>
    <string name="othrs">Others</string>

    <string name="ADD">add</string>

    <string name="tipus_estudis_hint">Tipo de estudios</string>
    <string name="button_create_school">CREAR ESCUELA</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="login_error">Incorrect username or password.</string>
    <string name="cancel_error">Login canceled.</string>
    <string name="login_dialog_error">Something failed at the start of session. Please, try again.</string>
    <string name="register_error">This username already exists. Please, choose another one.</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_explanation">Without this permission the app is unable to access your location. Are you sure you want to deny this permission?</string>
    <string name="sure">I\'M SURE</string>
    <string name="retry">RETRY</string>
    <string name="acces_login">Login access</string>
    <string name="show_list">Show list</string>
    <string name="provinces">Provinces</string>
    <string name="show_map">Show map</string>
    <string name="Infantil">infantile</string>
    <string name="Primaria">primary</string>
    <string name="Batxillerato">Batxillerat</string>
    <string name="ESO">ESO</string>
    <string name="FP">FP</string>
    <string name="UNI">University</string>

    <string name="tipus_estudis_title">Courses</string>
    <string name="uni">University</string>
    <string name="batx">Batxillerat</string>
    <string name="eso">ESO</string>
    <string name="infantil">infantile</string>
    <string name="primaria">primary</string>
    <string name="wait">Loading information. Please wait.</string>


</resources>